Fix:Arreglado bug al resolver mano cuando todos los jugadores hacían all-in o no habia jugadores activos